minor cleanups